--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://connieliu0.github.io/p5showcase",
+  "homepage": "https://connieliu0.github.io/p5.js-showcase/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.4.0",
+    "chart.js": "^2.9.3",
     "gh-pages": "^3.1.0",
     "i18next": "^19.6.0",
     "i18next-browser-languagedetector": "^5.0.0",
     "i18next-xhr-backend": "^3.2.2",
+    "leaflet": "^1.6.0",
+    "mappa-mundi": "0.0.5",
+    "p5": "^1.1.9",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
+    "react-leaflet": "^2.7.0",
     "react-markdown": "^4.3.1",
+    "react-p5-wrapper": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactjs-popup": "^1.5.0"
