--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^11.7.0",
     "react-leaflet": "^2.7.0",
+    "react-leaflet-markercluster": "^2.0.0",
     "react-markdown": "^4.3.1",
     "react-p5-wrapper": "^2.0.0",
     "react-router-dom": "^5.2.0",
