--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-markdown": "^4.3.1",
     "react-p5-wrapper": "^2.0.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.0.0",
     "react-scripts": "3.4.1",
     "reactjs-popup": "^1.5.0"
   },
