--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.4.0",
+    "body-scroll-lock": "^3.0.3",
     "chart.js": "^2.9.3",
     "gh-pages": "^3.1.0",
     "i18next": "^19.6.0",
@@ -27,6 +28,7 @@
     "react-p5-wrapper": "^2.0.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.0.0",
+    "react-router-modal": "^1.5.2",
     "react-scripts": "3.4.1",
     "reactjs-popup": "^1.5.0"
   },
